--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,41 @@
 cmake_minimum_required(VERSION 3.16)
 
 include(local_conf.cmake OPTIONAL)
+include(FetchContent)
+FetchContent_Declare(
+	ccommon
+	GIT_REPOSITORY https://github.com/EddyTheCo/Common.git
+	GIT_TAG main
+	)
+FetchContent_MakeAvailable(ccommon)
+version_from_git(
+	LOG       OFF
+	TIMESTAMP "%Y%m%d%H%M%S"
+	)
 
-project(DLockers VERSION 0.1 LANGUAGES CXX)
+project(DLockers VERSION ${VERSION} LANGUAGES CXX)
 
-set(CMAKE_AUTOMOC ON)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+include(GNUInstallDirs)
 
-find_package(Qt6 COMPONENTS Core)
-find_package(Qt6 COMPONENTS Gui)
-find_package(Qt6 COMPONENTS Quick)
-find_package(Qt6 COMPONENTS Qml)
+set(default_build_type "Release")
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+	message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
+	set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
+		STRING "Choose the type of build." FORCE)
+	# Set the possible values of build type for cmake-gui
+	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
+		"Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
 
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Quick Qml )
+
+qt_standard_project_setup()
 
 qt_add_executable(server_main server_main.cpp)
 
@@ -25,58 +49,91 @@ qt6_add_qml_module(server_main
 	qml/window.qml
 	qml/Enter_Pin_server.qml
 	qml/Head.qml
-        RESOURCE_PREFIX
-         "/esterVtech.com/imports"
-        IMPORTS MyDesigns nodeConection account booking_model
+	RESOURCE_PREFIX
+	"/esterVtech.com/imports"
+	IMPORTS MyDesigns nodeConection account booking_model
 	IMPORT_PATH
-        ${CMAKE_BINARY_DIR}/_deps/mydesigns-build
+	${CMAKE_BINARY_DIR}/_deps/mydesigns-build
 	${CMAKE_BINARY_DIR}/_deps/nodeconection-build
 	${CMAKE_BINARY_DIR}/_deps/account-build
-        ${CMAKE_BINARY_DIR}/_deps/booking_model-build
+	${CMAKE_BINARY_DIR}/_deps/booking_model-build
+	)
+
+qt_add_resources(server_main "server_main.fonts"
+	PREFIX "/esterVtech.com/imports/server"
+	FILES
+	"qml/fonts/DeliciousHandrawn-Regular.ttf"
 	)
 
 
-target_link_libraries(server_main PRIVATE Qt::Core Qt::Gui Qt::Qml Qt::Quick)
-
-target_include_directories(server_main PUBLIC include)
-
-include(FetchContent)
 FetchContent_Declare(
 	qrCode
-	GIT_REPOSITORY git@github.com:EddyTheCo/qrCode.git
-	GIT_TAG main
+	GIT_REPOSITORY https://github.com/EddyTheCo/qrCode.git
+	GIT_TAG v0.0.1
+	FIND_PACKAGE_ARGS 0 CONFIG
 	)
 FetchContent_MakeAvailable(qrCode)
 
 FetchContent_Declare(
-        booking_model
-        GIT_REPOSITORY git@github.com:EddyTheCo/Booking_model.git
-	GIT_TAG main
+	MyDesigns
+	GIT_REPOSITORY https://github.com/EddyTheCo/MyDesigns.git
+	GIT_TAG v0.1.1
+	FIND_PACKAGE_ARGS 0 CONFIG
 	)
-FetchContent_MakeAvailable(booking_model)
-
+FetchContent_MakeAvailable(MyDesigns)
 FetchContent_Declare(
-        nodeConection
-        GIT_REPOSITORY git@github.com:EddyTheCo/ConectionSettings.git
-	GIT_TAG main
+	account
+	GIT_REPOSITORY https://github.com/EddyTheCo/account.git
+	GIT_TAG v0.1.1
+	FIND_PACKAGE_ARGS 0 CONFIG
+	)
+FetchContent_MakeAvailable(account)
+FetchContent_Declare(
+	nodeConection
+	GIT_REPOSITORY https://github.com/EddyTheCo/ConectionSettings.git
+	GIT_TAG v0.1.3
+	FIND_PACKAGE_ARGS 0 CONFIG
 	)
 FetchContent_MakeAvailable(nodeConection)
 
 FetchContent_Declare(
-        account
-        GIT_REPOSITORY git@github.com:EddyTheCo/account.git
+	booking_model
+	GIT_REPOSITORY https://github.com/EddyTheCo/Booking_model.git
 	GIT_TAG main
 	)
-FetchContent_MakeAvailable(account)
+FetchContent_MakeAvailable(booking_model)
 
-target_link_libraries(server_main PRIVATE booking_model nodeConection account QtQrGen)
-target_compile_definitions(server_main
-	PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-if(EMSCRIPTEN)
-add_custom_command(
-	TARGET server_main
-	POST_BUILD
-	COMMAND ${CMAKE_COMMAND}
-	ARGS -E copy ${CMAKE_CURRENT_BINARY_DIR}/server_main.js ${CMAKE_CURRENT_BINARY_DIR}/server_main.wasm ${CMAKE_CURRENT_BINARY_DIR}/qtloader.js  ${CMAKE_CURRENT_SOURCE_DIR}/wasm
+target_link_libraries(server_main PRIVATE booking_model nodeConection account QtQrGen MyDesigns)
+target_link_libraries(server_main PRIVATE Qt::Core Qt::Gui Qt::Qml Qt::Quick)
+
+
+target_include_directories(server_main PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/DLockers>)
+
+set_target_properties(server_main PROPERTIES
+	WIN32_EXECUTABLE ON
+	MACOSX_BUNDLE ON
 	)
+
+
+install(TARGETS server_main ${out_targets_var}
+	DESTINATION ${CMAKE_INSTALL_BINDIR}
+	)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
+	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/DLockers
+	)
+if(EMSCRIPTEN)
+	add_custom_command(
+		TARGET server_main
+		POST_BUILD
+		COMMAND ${CMAKE_COMMAND}
+		ARGS -E copy ${CMAKE_CURRENT_BINARY_DIR}/server_main.js ${CMAKE_CURRENT_BINARY_DIR}/server_main.wasm ${CMAKE_CURRENT_BINARY_DIR}/qtloader.js  ${CMAKE_CURRENT_SOURCE_DIR}/wasm
+		)
 endif()
+
+set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-v${SEMVER}-${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_VERSION}-${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_CXX_COMPILER_ID}")
+
+if(USE_THREADS)
+	set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-MThread")
+endif(USE_THREADS)
+include(CPack)
