--- a/.github/workflows/build-test-install.yml
+++ b/.github/workflows/build-test-install.yml
@@ -22,7 +22,7 @@ jobs:
       os: ${{ matrix.os }}
       sharedLib: ${{ matrix.sharedLib }}
       useThread: ${{ matrix.useThread }}
-      qtModules: 'qtwebsockets qtshadertools' 
+      qtModules: 'qtwebsockets qtshadertools qtmultimedia' 
       test: false
       qtVersion: '6.6.0'
     secrets:
